solved overflow problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@ body {
   text-align: center;
   font-family: 'Merriweather Sans', sans-serif;
   margin: 0;
+    max-width: 100%;
+  overflow-x: hidden;
 }
 
 .freebird {
